--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Game of Life (WASM)</title>
+    <meta name="author" content="Arpit Jain (arpitjp+wasm-game-of-life@gmail.com)">
+    <meta name="keywords" content="React,WASM,web-assembly,Vite,JS,Rust,SWC,arpitjp">
   </head>
   <body>
     <div id="root"></div>
