--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game of Life (WASM)</title>
+    <meta property="og:title" content="Game of Life built using Rust-WASM & React" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/37728770/218518456-db59fafd-1004-48fc-84a0-b2607d813099.png" />
+    <meta property="og:url" content="https://arpitjp.github.io/wasm-game-of-life/" />
     <meta name="author" content="Arpit Jain (arpitjp+wasm-game-of-life@gmail.com)">
     <meta name="keywords" content="React,WASM,web-assembly,Vite,JS,Rust,SWC,arpitjp">
   </head>
