--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Game of Life built using Rust-WASM & React">
     <meta name="author" content="Arpit Jain (arpitjp+wasm-game-of-life@gmail.com)">
     <meta name="keywords" content="React,WASM,web-assembly,Vite,JS,Rust,SWC,arpitjp">
+    <meta name="image" content="https://user-images.githubusercontent.com/37728770/218518456-db59fafd-1004-48fc-84a0-b2607d813099.png">
     <!-- open graph -->
     <meta property="og:title" content="Game of Life" />
     <meta property="og:description" content="Game of Life built using Rust-WASM & React" />
