--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:image" content="https://user-images.githubusercontent.com/37728770/218541780-f4894d3c-d45a-4910-bc92-b245d6094a8d.png" />
     <meta property="og:url" content="https://arpitjp.github.io/wasm-game-of-life/" />
     <!-- twitter -->
-    <meta name="twitter:card" content="summary"></meta>
-    <meta name="twitter:creator" content="https://github.com/arpitjp"></meta>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="https://github.com/arpitjp" />
     <meta property="twitter:title" content="Game of Life" />
     <meta property="twitter:description" content="Game of Life built using Rust-WASM & React" />
     <meta property="twitter:image" content="https://user-images.githubusercontent.com/37728770/218541780-f4894d3c-d45a-4910-bc92-b245d6094a8d.png" />
