--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Game of Life">
     <meta name="description" content="Game of Life built using Rust-WASM & React">
     <meta name="author" content="Arpit Jain (arpitjp+wasm-game-of-life@gmail.com)">
-    <meta name="keywords" content="React,WASM,web-assembly,Vite,JS,Rust,SWC,arpitjp">
+    <meta name="keywords" content="React,WASM,web-assembly,Vite,JS,Rust,SWC,arpitjp,wasm-game-of-life,game-of-life,conway's-game-of-life,conway,john-conway,rust-lang,open-graph-card-previews">
     <meta name="image" content="https://user-images.githubusercontent.com/37728770/218541780-f4894d3c-d45a-4910-bc92-b245d6094a8d.png">
     <!-- open graph -->
     <meta property="og:title" content="Game of Life" />
