dope ass favicon icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game of Life</title>
     <meta name="title" content="Conway's Game of Life">
@@ -18,6 +17,8 @@
     <!-- twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="https://github.com/arpitjp" />
+    <!-- favicon -->
+    <link rel="icon" href="/favicon-transparent.gif" type="image/gif" />
   </head>
   <body>
     <div id="root"></div>
